Kube_Practic/practice/1.kube-basics-lecture/1.9.ingress/ingress-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: studa.com
    http:
        paths:
          - backend:
              service:
                name: my-service
                port:
                  number: 80
            pathType: Prefix
            path: /
